Fixed the overflow for real I think woman

--- a/public/css/freelancer.css
+++ b/public/css/freelancer.css
@@ -26,6 +26,7 @@
 .button {
   border: white 1px;
 }
+html,
 body {
   overflow-x: hidden;
 }
@@ -299,7 +300,7 @@ section.success {
   -ms-transition: top 0.3s ease,opacity 0.3s ease;
   transition: top 0.3s ease,opacity 0.3s ease;
 }
-.floating-label-form-group::not(:first-child) {
+.floating-label-form-group:not(:first-child) {
   padding-left: 14px;
   border-left: 1px solid #eeeeee;
 }
@@ -624,7 +625,7 @@ section.success a.active {
   -ms-transition: top 0.3s ease,opacity 0.3s ease;
   transition: top 0.3s ease,opacity 0.3s ease;
 }
-.floating-label-form-group::not(:first-child) {
+.floating-label-form-group:not(:first-child) {
   padding-left: 14px;
   border-left: 1px solid #eeeeee;
 }
